@@ -1,4 +1,4 @@
-$Id: History,v 1.15 2000-02-22 15:31:33 johna Exp $
+$Id: History,v 1.16 2000-02-22 16:41:46 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+22nd February 2000  Evgeni Chernaev (greps-V01-00-03)
+- Re-instated edge flags for "invisible" edges of HepPolyhedronCons and Torus.
 
 22nd February 2000  John Allison  (greps-V01-00-02)
 - Added HepPolyhedron (Evgeni Chernaev).  Re-implemented G4Polyhedron.
